--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
     float: left;
 }
 
+.new-problem{
+    float: right;
+    margin-right: 100px;
+}
+
 .forget-password {
     display: inline-block;
     margin-left: 30px;
@@ -358,4 +363,29 @@ div.user-stats li.failed{
 .submit textarea {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     -moz-tab-size: 4; -o-tab-size: 4; tab-size: 4;
+}
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
+.btn-circle.btn-lg {
+  width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
+}
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
 }
