--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 
 .new-problem{
     float: right;
-    margin-right: 100px;
+    margin-right: 10%;
 }
 
 .forget-password {
@@ -388,4 +388,13 @@ div.user-stats li.failed{
   font-size: 24px;
   line-height: 1.33;
   border-radius: 35px;
+}
+
+.side-bar{
+    float: right;
+    margin-right: 3%;
+}
+
+.side-bar:first-child{
+    margin-right: 10%;
 }
